GCC fix: lambda expression cannot reach this scope.

Compilation fails in CSSNumericValue.equals in GCC,
in a lambda expression predicate for std::all_of.
Equals() call does not automatically use this in the
calling function scope.

This is caused by the bug in GCC "Inconsistent `this->`
required when calling member function in a lambda
capturing `this` through another function"
https://gcc.gnu.org/bugzilla/show_bug.cgi?id=67274

The change exposing GCC error was:
    commit 2a69342af02f81a213108f6aa99054a6ae251c56 [formerly 4bb7df981adb7e5e6f52363b9411dc38d6829f88]
    Author: Darren Shen <shend@chromium.org>
    Date:   Thu Nov 16 04:25:01 2017 +0000

    [css-typed-om] Implement CSSNumericValue.equals

Bug: 787601
Change-Id: I92009d38a52665d719314f4d7b7d874cd4b419ad
Reviewed-on: https://chromium-review.googlesource.com/783710
Reviewed-by: Darren Shen <shend@chromium.org>
Commit-Queue: José Dapena Paz <jose.dapena@lge.com>
Cr-Commit-Position: refs/heads/master@{#518445}
Former-commit-id: dd082eca6cb51d29d6120be284849745675b031a